Adding basic monorepo setup, that includes apps and packages folder and workspaces.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-# Node modules
+# Modules
+
 node_modules
 
-# NX Setup
-.nx
 
-.cursor/rules/nx-rules.mdc
-.github/instructions/nx.instructions.md
+# Build 
+
+dist
+build
