--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "scripts": {},
   "author": "CodeDragon03 jay7666.professional@gmail.com",
   "license": "MIT",
-  "packageManager": "pnpm@10.15.0"
+  "packageManager": "pnpm@10.15.0",
+  "engines": {
+    "node": ">=22.0.0"
+  },
+  "dependencies": {
+    "nx": "^21.5.3"
+  }
 }
