--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,11 @@
   "version": "1.0.0",
   "type": "module",
   "sideEffects": false,
-  "scripts": {},
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon --exec ts-node index.ts"
+  },
   "engines": {
     "node": ">=22.0.0"
   },
@@ -14,6 +18,16 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@eslint/js": "^9.36.0",
+    "@eslint/json": "^0.13.2",
+    "@eslint/markdown": "^7.2.0",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.5.2",
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0",
+    "jiti": "^2.5.1",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.44.0"
   }
 }
