--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -7,8 +7,7 @@
     "module": "nodenext",
     "skipLibCheck": true,
 
-    /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "NodeNext",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
