--- a/package.json
+++ b/package.json
@@ -10,5 +10,16 @@
   },
   "dependencies": {
     "nx": "^21.5.3"
+  },
+  "devDependencies": {
+    "@nx/eslint": "21.5.2",
+    "@nx/vite": "21.5.2",
+    "@nx/web": "21.5.2",
+    "@vitest/ui": "^3.0.0",
+    "eslint": "~8.57.0",
+    "jiti": "2.4.2",
+    "nx": "21.5.2",
+    "vite": "^7.0.0",
+    "vitest": "^3.0.0"
   }
 }
