--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,36 +1,9 @@
 {
   "name": "@monorepo/ui",
   "private": true,
-  "version": "1.0.0",
   "type": "module",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "rm -rf dist && tsc"
-  },
-  "license": "MIT",
-  "engines": {
-    "node": ">=22.0.0"
-  },
-  "dependencies": {
-    "@monorepo/eslint-config": "workspace:*",
-    "@monorepo/typescript-config": "workspace:*",
-    "clsx": "^2.1.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
-  },
-  "devDependencies": {
-    "@eslint/css": "^0.11.0",
-    "@eslint/js": "^9.36.0",
-    "@eslint/json": "^0.13.2",
-    "@eslint/markdown": "^7.2.0",
-    "@types/node": "^24.5.2",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.4.0",
-    "jiti": "^2.5.1",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.44.0"
-  }
+  "version": "1.0.0",
+  "main": "index.ts",
+  "scripts": {},
+  "devDependencies": {}
 }
