--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,7 @@
         "build": "tsc",
         "type:checks": "tsc --noEmit",
         "start": "nodemon src/index.ts",
+        "clean": "pnpm clean",
         "lint": "eslint .",
         "test": "vitest"
     },
