--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,7 @@
         "build": "tsc && vite build",
         "dev": "vite",
         "type:checks": "tsc --noEmit",
+        "clean": "pnpm clean",
         "lint": "eslint .",
         "test": "vitest"
     },
