--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "turbo run build",
         "dev": "turbo run dev",
         "prepare": "husky",
+        "clean": "turbo run clean",
         "type:checks": "turbo run type:checks",
         "test:e2e": "turbo run test:e2e",
         "lint": "turbo run lint",
