--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "biuld": "tsc",
         "lint": "eslint .",
-        "test": "vitest"
+        "test": "vitest",
+        "clean": "pnpm clean"
     },
     "exports": {
         ".": "./dist/index.js"
